fixing modality bug, merging two create icon in one dropdownlist [UI: Modality window not visible when longer as browser window #285]

--- a/dcm4chee-arc-ui/src/main/webapp/scss/mobile.scss
+++ b/dcm4chee-arc-ui/src/main/webapp/scss/mobile.scss
@@ -13,4 +13,9 @@
 				}
 			}
 	}
+	.row.filter{
+		label{
+			font-size: 12px;
+		}
+	}
 }
